log-schemas/27.5/opcua_binary_event_filter_where_clause_elements.rst
``opcua_binary_event_filter_where_clause_elements`` field reference
-------------------------------------------------------------------

.. list-table::
   :header-rows: 1
   :class: longtable
   :widths: 1 3

   * - Field (Type)
     - Description

   * - ``ts`` (time)
     - The ts information.

   * - ``uid`` (string)
     - The uid information.

   * - ``id.orig_h`` (string - addr)
     - The originator's IP address.

   * - ``id.orig_p`` (integer - port)
     - The originator's port number.

   * - ``id.resp_h`` (string - addr)
     - The responder's IP address.

   * - ``id.resp_p`` (integer - port)
     - The responder's port number.

   * - ``content_filter_element_link_id`` (string)
     - The content_filter_element_link_id information.

   * - ``filter_operator`` (string)
     - The filter_operator information.

   * - ``content_filter_filter_operand_type_id_node_id_encoding_mask`` (string)
     - The content_filter_filter_operand_type_id_node_id_encoding_mask information.

   * - ``content_filter_filter_operand_type_id_node_id_namespace_idx`` (integer - count)
     - The content_filter_filter_operand_type_id_node_id_namespace_idx information.

   * - ``content_filter_filter_operand_type_id_node_id_numeric`` (integer - count)
     - The content_filter_filter_operand_type_id_node_id_numeric information.

   * - ``content_filter_filter_operand_type_id_node_id_string`` (string)
     - The content_filter_filter_operand_type_id_node_id_string information.

   * - ``content_filter_filter_operand_type_id_node_id_guid`` (string)
     - The content_filter_filter_operand_type_id_node_id_guid information.

   * - ``content_filter_filter_operand_type_id_node_id_opaque`` (string)
     - The content_filter_filter_operand_type_id_node_id_opaque information.

   * - ``content_filter_filter_operand_type_id_string`` (string)
     - The content_filter_filter_operand_type_id_string information.

   * - ``content_filter_filter_operand_type_id_encoding`` (string)
     - The content_filter_filter_operand_type_id_encoding information.

   * - ``content_filter_filter_operand_link_id`` (string)
     - The content_filter_filter_operand_link_id information.

   * - ``content_filter_operand_status_code_link_id`` (string)
     - The content_filter_operand_status_code_link_id information.

   * - ``content_filter_operand_diag_info_link_id`` (string)
     - The content_filter_operand_diag_info_link_id information.
